Fixed the issue in design system overflow on small screen

--- a/Design System/stylesheet.css
+++ b/Design System/stylesheet.css
@@ -44,6 +44,9 @@ h2{font-size: 2.8rem;}
   body::-webkit-scrollbar {
     display: none;
   }
+  .codepenDiv{
+    overflow-y: scroll;
+  }
   button {
     border: none;
   border-radius: 5px;
